# app/app/api/app_http.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-http v2.7.1
-// - protoc             v3.21.7
+// - protoc-gen-go-http v2.8.0
+// - protoc             v5.28.0
 // source: app/app/api/app.proto
 
 package api
@@ -42,6 +42,7 @@ const OperationAppTrade = "/api.App/Trade"
 const OperationAppTradeList = "/api.App/TradeList"
 const OperationAppTran = "/api.App/Tran"
 const OperationAppTranList = "/api.App/TranList"
+const OperationAppUnStake = "/api.App/UnStake"
 const OperationAppUserArea = "/api.App/UserArea"
 const OperationAppUserInfo = "/api.App/UserInfo"
 const OperationAppWithdraw = "/api.App/Withdraw"
@@ -96,6 +97,7 @@ type AppHTTPServer interface {
 	TradeList(context.Context, *TradeListRequest) (*TradeListReply, error)
 	Tran(context.Context, *TranRequest) (*TranReply, error)
 	TranList(context.Context, *TranListRequest) (*TranListReply, error)
+	UnStake(context.Context, *UnStakeRequest) (*UnStakeReply, error)
 	UserArea(context.Context, *UserAreaRequest) (*UserAreaReply, error)
 	UserInfo(context.Context, *UserInfoRequest) (*UserInfoReply, error)
 	Withdraw(context.Context, *WithdrawRequest) (*WithdrawReply, error)
@@ -131,6 +133,7 @@ func RegisterAppHTTPServer(s *http.Server, srv AppHTTPServer) {
 	r.POST("/api/app_server/buy", _App_Buy0_HTTP_Handler(srv))
 	r.POST("/api/app_server/amount_to", _App_AmountTo0_HTTP_Handler(srv))
 	r.POST("/api/app_server/stake", _App_Stake0_HTTP_Handler(srv))
+	r.POST("/api/app_server/un_stake", _App_UnStake0_HTTP_Handler(srv))
 }
 
 func _App_EthAuthorize0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
@@ -685,6 +688,28 @@ func _App_Stake0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
 	}
 }
 
+func _App_UnStake0_HTTP_Handler(srv AppHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in UnStakeRequest
+		if err := ctx.Bind(&in.SendBody); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAppUnStake)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.UnStake(ctx, req.(*UnStakeRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*UnStakeReply)
+		return ctx.Result(200, reply)
+	}
+}
+
 type AppHTTPClient interface {
 	AdminFee(ctx context.Context, req *AdminFeeRequest, opts ...http.CallOption) (rsp *AdminFeeReply, err error)
 	AdminWithdraw(ctx context.Context, req *AdminWithdrawRequest, opts ...http.CallOption) (rsp *AdminWithdrawReply, err error)
@@ -709,6 +734,7 @@ type AppHTTPClient interface {
 	TradeList(ctx context.Context, req *TradeListRequest, opts ...http.CallOption) (rsp *TradeListReply, err error)
 	Tran(ctx context.Context, req *TranRequest, opts ...http.CallOption) (rsp *TranReply, err error)
 	TranList(ctx context.Context, req *TranListRequest, opts ...http.CallOption) (rsp *TranListReply, err error)
+	UnStake(ctx context.Context, req *UnStakeRequest, opts ...http.CallOption) (rsp *UnStakeReply, err error)
 	UserArea(ctx context.Context, req *UserAreaRequest, opts ...http.CallOption) (rsp *UserAreaReply, err error)
 	UserInfo(ctx context.Context, req *UserInfoRequest, opts ...http.CallOption) (rsp *UserInfoReply, err error)
 	Withdraw(ctx context.Context, req *WithdrawRequest, opts ...http.CallOption) (rsp *WithdrawReply, err error)
@@ -733,7 +759,7 @@ func (c *AppHTTPClientImpl) AdminFee(ctx context.Context, in *AdminFeeRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) AdminWithdraw(ctx context.Context, in *AdminWithdrawRequest, opts ...http.CallOption) (*AdminWithdrawReply, error) {
@@ -746,7 +772,7 @@ func (c *AppHTTPClientImpl) AdminWithdraw(ctx context.Context, in *AdminWithdraw
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) AdminWithdrawEth(ctx context.Context, in *AdminWithdrawEthRequest, opts ...http.CallOption) (*AdminWithdrawEthReply, error) {
@@ -759,7 +785,7 @@ func (c *AppHTTPClientImpl) AdminWithdrawEth(ctx context.Context, in *AdminWithd
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) AmountTo(ctx context.Context, in *AmountToRequest, opts ...http.CallOption) (*AmountToReply, error) {
@@ -772,7 +798,7 @@ func (c *AppHTTPClientImpl) AmountTo(ctx context.Context, in *AmountToRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Buy(ctx context.Context, in *BuyRequest, opts ...http.CallOption) (*BuyReply, error) {
@@ -785,7 +811,7 @@ func (c *AppHTTPClientImpl) Buy(ctx context.Context, in *BuyRequest, opts ...htt
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) DeleteBalanceReward(ctx context.Context, in *DeleteBalanceRewardRequest, opts ...http.CallOption) (*DeleteBalanceRewardReply, error) {
@@ -798,7 +824,7 @@ func (c *AppHTTPClientImpl) DeleteBalanceReward(ctx context.Context, in *DeleteB
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Deposit(ctx context.Context, in *DepositRequest, opts ...http.CallOption) (*DepositReply, error) {
@@ -811,7 +837,7 @@ func (c *AppHTTPClientImpl) Deposit(ctx context.Context, in *DepositRequest, opt
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) EthAuthorize(ctx context.Context, in *EthAuthorizeRequest, opts ...http.CallOption) (*EthAuthorizeReply, error) {
@@ -824,7 +850,7 @@ func (c *AppHTTPClientImpl) EthAuthorize(ctx context.Context, in *EthAuthorizeRe
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Exchange(ctx context.Context, in *ExchangeRequest, opts ...http.CallOption) (*ExchangeReply, error) {
@@ -837,7 +863,7 @@ func (c *AppHTTPClientImpl) Exchange(ctx context.Context, in *ExchangeRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) FeeRewardList(ctx context.Context, in *FeeRewardListRequest, opts ...http.CallOption) (*FeeRewardListReply, error) {
@@ -850,7 +876,7 @@ func (c *AppHTTPClientImpl) FeeRewardList(ctx context.Context, in *FeeRewardList
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) GetTrade(ctx context.Context, in *GetTradeRequest, opts ...http.CallOption) (*GetTradeReply, error) {
@@ -863,7 +889,7 @@ func (c *AppHTTPClientImpl) GetTrade(ctx context.Context, in *GetTradeRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) PasswordChange(ctx context.Context, in *PasswordChangeRequest, opts ...http.CallOption) (*PasswordChangeReply, error) {
@@ -876,7 +902,7 @@ func (c *AppHTTPClientImpl) PasswordChange(ctx context.Context, in *PasswordChan
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) RecommendList(ctx context.Context, in *RecommendListRequest, opts ...http.CallOption) (*RecommendListReply, error) {
@@ -889,7 +915,7 @@ func (c *AppHTTPClientImpl) RecommendList(ctx context.Context, in *RecommendList
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) RecommendRewardList(ctx context.Context, in *RecommendRewardListRequest, opts ...http.CallOption) (*RecommendRewardListReply, error) {
@@ -902,7 +928,7 @@ func (c *AppHTTPClientImpl) RecommendRewardList(ctx context.Context, in *Recomme
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) RecommendUpdate(ctx context.Context, in *RecommendUpdateRequest, opts ...http.CallOption) (*RecommendUpdateReply, error) {
@@ -915,7 +941,7 @@ func (c *AppHTTPClientImpl) RecommendUpdate(ctx context.Context, in *RecommendUp
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) RewardList(ctx context.Context, in *RewardListRequest, opts ...http.CallOption) (*RewardListReply, error) {
@@ -928,7 +954,7 @@ func (c *AppHTTPClientImpl) RewardList(ctx context.Context, in *RewardListReques
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) SetBalanceReward(ctx context.Context, in *SetBalanceRewardRequest, opts ...http.CallOption) (*SetBalanceRewardReply, error) {
@@ -941,7 +967,7 @@ func (c *AppHTTPClientImpl) SetBalanceReward(ctx context.Context, in *SetBalance
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Stake(ctx context.Context, in *StakeRequest, opts ...http.CallOption) (*StakeReply, error) {
@@ -954,7 +980,7 @@ func (c *AppHTTPClientImpl) Stake(ctx context.Context, in *StakeRequest, opts ..
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) TokenWithdraw(ctx context.Context, in *TokenWithdrawRequest, opts ...http.CallOption) (*TokenWithdrawReply, error) {
@@ -967,7 +993,7 @@ func (c *AppHTTPClientImpl) TokenWithdraw(ctx context.Context, in *TokenWithdraw
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Trade(ctx context.Context, in *WithdrawRequest, opts ...http.CallOption) (*WithdrawReply, error) {
@@ -980,7 +1006,7 @@ func (c *AppHTTPClientImpl) Trade(ctx context.Context, in *WithdrawRequest, opts
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) TradeList(ctx context.Context, in *TradeListRequest, opts ...http.CallOption) (*TradeListReply, error) {
@@ -993,7 +1019,7 @@ func (c *AppHTTPClientImpl) TradeList(ctx context.Context, in *TradeListRequest,
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Tran(ctx context.Context, in *TranRequest, opts ...http.CallOption) (*TranReply, error) {
@@ -1006,7 +1032,7 @@ func (c *AppHTTPClientImpl) Tran(ctx context.Context, in *TranRequest, opts ...h
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) TranList(ctx context.Context, in *TranListRequest, opts ...http.CallOption) (*TranListReply, error) {
@@ -1019,7 +1045,20 @@ func (c *AppHTTPClientImpl) TranList(ctx context.Context, in *TranListRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
+}
+
+func (c *AppHTTPClientImpl) UnStake(ctx context.Context, in *UnStakeRequest, opts ...http.CallOption) (*UnStakeReply, error) {
+	var out UnStakeReply
+	pattern := "/api/app_server/un_stake"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAppUnStake))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in.SendBody, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) UserArea(ctx context.Context, in *UserAreaRequest, opts ...http.CallOption) (*UserAreaReply, error) {
@@ -1032,7 +1071,7 @@ func (c *AppHTTPClientImpl) UserArea(ctx context.Context, in *UserAreaRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) UserInfo(ctx context.Context, in *UserInfoRequest, opts ...http.CallOption) (*UserInfoReply, error) {
@@ -1045,7 +1084,7 @@ func (c *AppHTTPClientImpl) UserInfo(ctx context.Context, in *UserInfoRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Withdraw(ctx context.Context, in *WithdrawRequest, opts ...http.CallOption) (*WithdrawReply, error) {
@@ -1058,7 +1097,7 @@ func (c *AppHTTPClientImpl) Withdraw(ctx context.Context, in *WithdrawRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) WithdrawList(ctx context.Context, in *WithdrawListRequest, opts ...http.CallOption) (*WithdrawListReply, error) {
@@ -1071,5 +1110,5 @@ func (c *AppHTTPClientImpl) WithdrawList(ctx context.Context, in *WithdrawListRe
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
